[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Parallax.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Transition.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Nivel1.gd" type="Script" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/boxs/nivels.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/Kenney Mini.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/buttons/nivels/audiopress.png" type="Texture" id=8]
[ext_resource path="res://assets/buttons/nivels/audiobasic.png" type="Texture" id=9]
[ext_resource path="res://scenes/Object.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 30
extra_spacing_space = 5
font_data = ExtResource( 7 )

[node name="Nivel1" type="Node2D"]
script = ExtResource( 3 )
Objeto = ExtResource( 10 )

[node name="Parallax" parent="." instance=ExtResource( 1 )]

[node name="Background" type="TextureRect" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 780.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Display" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 100.0
margin_right = 1160.0
margin_bottom = 404.0
rect_min_size = Vector2( 1040, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin1" type="MarginContainer" parent="Display"]
margin_right = 1040.0
margin_bottom = 130.0
rect_min_size = Vector2( 1040, 130 )

[node name="Indicaciones" type="RichTextLabel" parent="Display/Margin1"]
margin_right = 1040.0
margin_bottom = 130.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true

[node name="Margin2" type="MarginContainer" parent="Display"]
margin_top = 134.0
margin_right = 1040.0
margin_bottom = 284.0
rect_min_size = Vector2( 1040, 150 )

[node name="Escuchar" type="TextureButton" parent="Display/Margin2"]
margin_left = 467.0
margin_top = 22.0
margin_right = 572.0
margin_bottom = 127.0
rect_min_size = Vector2( 105, 105 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="Objects" type="Node2D" parent="."]
visible = false

[node name="Sounds" type="Node2D" parent="."]
visible = false

[node name="Options" type="Node2D" parent="."]
visible = false

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Transition" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]
[connection signal="pressed" from="Display/Margin2/Escuchar" to="." method="_on_Escuchar_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
